# gest-ashoex-backend/routes/api.php
@@ -32,6 +32,7 @@ Route::controller(CurriculaController::class)->group(function () {
 
 Route::controller(MateriaController::class)->group(function () {
     Route::get('/materias', 'index');
+    Route::post('/materias','store');
 });
 
 Route::get('/grupo',[GrupoController::class,'index']);
